Projet GL/test/src/test/deca/context/valid/increment2/float-op-int-float.deca
// Test : type_arith_op(int, float) = float

// Resultats : 5.5

//Historique : cree le 09/01/2023

{
    int a = 2;
    float b,c;

    b = 3.5;

    c = a + b;
}